should fix ipad overflow

--- a/src/global.css
+++ b/src/global.css
@@ -33,6 +33,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 0;
+  min-height: 0;
   flex: 1;
   background-color: black;
 }
@@ -40,6 +41,7 @@ body {
 .space-image {
   max-height: 100%;
   max-width: 100%;
+  height: auto;
   flex: 1;
   object-fit: contain;
 }
@@ -82,6 +84,8 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   gap: 5px;
+  flex-shrink: 0;
+  flex-grow: 0;
 }
 
 .currentDescription {
